clean unnecessary data